Fix basic example entry file

--- a/examples/basic/package.json
+++ b/examples/basic/package.json
@@ -1,7 +1,7 @@
 {
   "name": "react-pending-resource-basic",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "index.tsx",
   "dependencies": {
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
