--- a/examples/basic/package.json
+++ b/examples/basic/package.json
@@ -3,6 +3,8 @@
   "version": "1.0.0",
   "main": "index.tsx",
   "dependencies": {
+    "@types/react": "^17.0.0",
+    "@types/react-dom": "^17.0.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-scripts": "^4.0.1",
